@@ -1,3 +1,5 @@
+2008/07/08
+	48. Remove useless method CflicDirectPath::init.
 2008/07/03
 	47. Modification in class CkwsPlusDPLinear.
 2008/07/01
